--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
+    "@types/dotenv": "^8.2.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=16.0.0",
     "chai": "^4.2.0",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
+    "dotenv": "^16.4.2",
     "hardhat-deploy": "^0.11.45"
   }
 }
